@@ -32,7 +32,7 @@ $versions['AUTHORS']='11306';
 $versions['ChangeLog']='';
 $versions['LICENSE.txt']='11584';
 $versions['README']='3848';
-$versions['Version.php']='17945';
+$versions['Version.php']='17967';
 $versions['add_comment.php']='17806';
 $versions['add_photos.php']='17812';
 $versions['add_photos_frame.php']='17808';
@@ -40,12 +40,12 @@ $versions['add_photos_refresh.php']='17808';
 $versions['admin-page.php']='17869';
 $versions['administer_startpage.php']='17812';
 $versions['album_permissions.php']='17902';
-$versions['albums.php']='17902';
+$versions['albums.php']='17964';
 $versions['block-random.php']='17827';
 $versions['captionator.php']='17806';
-$versions['classes/Album.php']='17905';
+$versions['classes/Album.php']='17958';
 $versions['classes/AlbumDB.php']='17811';
-$versions['classes/AlbumItem.php']='17898';
+$versions['classes/AlbumItem.php']='17959';
 $versions['classes/Colors.php']='17840';
 $versions['classes/Comment.php']='17808';
 $versions['classes/Database.php']='17808';
@@ -67,7 +67,7 @@ $versions['classes/XML_HTMLSax3/HTMLSax3/Decorators.php']='17671';
 $versions['classes/XML_HTMLSax3/HTMLSax3/Grammar.php']='149';
 $versions['classes/XML_HTMLSax3/HTMLSax3/States.php']='17671';
 $versions['classes/database/mysql/Database.php']='17806';
-$versions['classes/gallery/User.php']='17811';
+$versions['classes/gallery/User.php']='17967';
 $versions['classes/gallery/UserDB.php']='17812';
 $versions['classes/geeklog/User.php']='17806';
 $versions['classes/geeklog/UserDB.php']='17806';
@@ -317,7 +317,7 @@ $versions['html_wrap/slideshow.header.default']='17851';
 $versions['html_wrap/stats.header.default']='';
 $versions['html_wrap/wrapper.footer.default']='17853';
 $versions['html_wrap/wrapper.header.default']='17853';
-$versions['imagemap.php']='17856';
+$versions['imagemap.php']='17959';
 $versions['images/BB1.gif']='';
 $versions['images/BL1.gif']='';
 $versions['images/BR1.gif']='';
@@ -499,7 +499,7 @@ $versions['java/metadata-extractor-2.1.jar']='';
 $versions['js/arrowkey_nav.js']='16779';
 $versions['js/client_sniff.js']='3038';
 $versions['js/fitToWindow.js.php']='17931';
-$versions['js/imagemap.js']='17856';
+$versions['js/imagemap.js']='17959';
 $versions['js/jopen.js']='16783';
 $versions['js/moorainbow/mooRainbow.js.php']='16779';
 $versions['js/moorainbow/mootools.v1.11.js']='16779';
@@ -531,16 +531,16 @@ $versions['layout/commentboxbottom.inc']='17848';
 $versions['layout/commentboxtop.inc']='17848';
 $versions['layout/commentdraw.inc']='17848';
 $versions['layout/navigator.inc']='17848';
-$versions['layout/navmicro.inc']='17941';
+$versions['layout/navmicro.inc']='17958';
 $versions['layout/navphoto.inc']='17848';
 $versions['layout/navtablebegin.inc']='6352';
 $versions['layout/navtableend.inc']='6352';
 $versions['layout/navtablemiddle.inc']='6352';
 $versions['layout/searchdraw.inc']='17848';
 $versions['layout/watermarkform.inc']='17819';
-$versions['lib/album.php']='17941';
+$versions['lib/album.php']='17965';
 $versions['lib/albumItem.php']='17900';
-$versions['lib/content.php']='17940';
+$versions['lib/content.php']='17964';
 $versions['lib/filesystem.php']='17882';
 $versions['lib/filetypes.php']='16662';
 $versions['lib/form.php']='17898';
@@ -559,10 +559,10 @@ $versions['lib/valchecks.php']='17900';
 $versions['lib/voting.php']='17945';
 $versions['login.php']='17837';
 $versions['manage_users.php']='17822';
-$versions['manifest.inc']='17801';
+$versions['manifest.inc']='17948';
 $versions['modify_user.php']='17811';
 $versions['move_album.php']='17806';
-$versions['move_photo.php']='17900';
+$versions['move_photo.php']='17963';
 $versions['multi_create_user.php']='17808';
 $versions['new_password.php']='17898';
 $versions['nls.php']='17808';
@@ -818,7 +818,7 @@ $versions['user_preferences.php']='17807';
 $versions['util.php']='17941';
 $versions['view_album.php']='17941';
 $versions['view_comments.php']='17933';
-$versions['view_photo.php']='17931';
+$versions['view_photo.php']='17958';
 $versions['view_photo_properties.php']='17806';
 $versions['watermark_album.php']='17806';
 ?>
